update found document,get it by id an ddelete by id with documentation
